k8s_prod.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8sdemo
spec:
  rules:
    - host: api2.qiuhu24.com
      http:
        paths:
          - path: /k8sdemo
            backend:
              serviceName: k8sdemo
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: k8sdemo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: k8sdemo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8sdemo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8sdemo
  template:
    metadata:
      labels:
        app: k8sdemo
    spec:
      containers:
        - name: k8sdemo
          image: docker.pkg.github.com/rexue2019/k8sdemo/k8sdemo-prod:v0.0.4-1-gfa89c82
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: docker-github
